--- a/.github/workflows/auto-semver-tag.yml
+++ b/.github/workflows/auto-semver-tag.yml
@@ -37,3 +37,30 @@ jobs:
         run: |
           git tag $TAG
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git $TAG
+
+      - name: Generate protobuf files
+        run: make generate
+
+      - name: Archive generated files
+        run: |
+          cd gen
+          tar -czf ../schema-gen-v${{ steps.version.outputs.version }}.tar.gz .
+          cd ..
+
+      - name: Create a GitHub Release with artifacts
+        uses: softprops/action-gh-release@v1
+        env:
+          TAG: v${{ steps.version.outputs.version }}
+        with:
+          tag_name: v${TAG}
+          name: Release v${TAG}
+          body: |
+            Automated release with generated protobuf files.
+            
+            **Generated files included:**
+            - Protobuf generated code in multiple languages
+            - Correspond with definitions in the branch tagged with version v${TAG}
+          files: |
+            schema-gen-v${TAG}.tar.gz
+          draft: false
+          prerelease: false
