--- a/.github/workflows/auto-semver-tag.yml
+++ b/.github/workflows/auto-semver-tag.yml
@@ -52,15 +52,15 @@ jobs:
         env:
           TAG: v${{ steps.version.outputs.version }}
         with:
-          tag_name: v${TAG}
-          name: Release v${TAG}
+          tag_name: v${{ env.TAG }}
+          name: Release v${{ env.TAG }}
           body: |
             Automated release with generated protobuf files.
             
             **Generated files included:**
             - Protobuf generated code in multiple languages
-            - Correspond with definitions in the branch tagged with version v${TAG}
+            - Correspond with definitions in the branch tagged with version v${{ env.TAG }}
           files: |
-            schema-gen-v${TAG}.tar.gz
+            schema-gen-v${{ env.TAG }}.tar.gz
           draft: false
           prerelease: false
