--- a/.github/workflows/auto-semver-tag.yml
+++ b/.github/workflows/auto-semver-tag.yml
@@ -38,15 +38,18 @@ jobs:
           git tag $TAG
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git $TAG
 
+      - name: Create/update latest tag
+        run: |
+          git tag -f latest v${{ steps.version.outputs.version }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git latest --force
+
       - name: Generate protobuf files
         run: make generate
 
       - name: Archive generated files
-        env:
-            TAG: v${{ steps.version.outputs.version }}
         run: |
           cd gen
-          tar -czf ../fyn-schema-gen-${{ env.TAG }}.tar.gz .
+          tar -czf ../fyn-schema-gen-v${{ steps.version.outputs.version }}.tar.gz .
           cd ..
 
       - name: Create a GitHub release with artifacts
