--- a/.github/workflows/archive-and-release.yaml
+++ b/.github/workflows/archive-and-release.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.event.base_ref == 'refs/heads/main'
+   #  if: github.event.base_ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
 
