--- a/.github/workflows/push-semver-tag.yml
+++ b/.github/workflows/push-semver-tag.yml
@@ -36,7 +36,7 @@ jobs:
           TAG: v${{ steps.version.outputs.version }}
         run: |
           git tag $TAG
-          git push https://${{ github.actor }}:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git $TAG
+          git push https://${{ secrets.PAT_OWNER }}:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git $TAG
 
       - name: Create/update latest tag
         run: |
