--- a/.github/workflows/push-semver-tag.yml
+++ b/.github/workflows/push-semver-tag.yml
@@ -1,6 +1,6 @@
 # This workflow automatically creates a semantic version tag when code is merged into the main branch. The tags will conform to the convention in https://semver.org/.
 
-name: Auto-generate semver tag on push to main
+name: Auto-Generate SemVer Tag
 
 on:
   push:
