--- a/.github/workflows/archive-and-release.yml
+++ b/.github/workflows/archive-and-release.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Get tag name
         id: get_tag
         run: |
-          # Get the tag that points to the triggering commit
-          TAG=$(git tag --points-at ${{ github.event.workflow_run.head_sha }} | head -1)
+          # Get the SemVer tag (e.g. v1.2.3) that points to the triggering commit
+          TAG=$(git tag --points-at ${{ github.event.workflow_run.head_sha }} | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | head -1)
           echo "tag_name=$TAG" >> $GITHUB_OUTPUT
           echo "Found tag: $TAG"
 
