--- a/.github/workflows/archive-and-release.yml
+++ b/.github/workflows/archive-and-release.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     # Only run if the first workflow succeeded
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    permissions:
+      contents: write  # Required to create releases
+      actions: read    # Required to read workflow run info
     steps:
       - uses: actions/checkout@v4
         with:
@@ -39,7 +42,7 @@ jobs:
           cd ..
 
       - name: Create a GitHub release with artifacts
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           TAG: ${{ steps.get_tag.outputs.tag_name }}
         with:
