fix: Grant write permissions to the workflow

--- a/.github/workflows/generate-semver-tag.yml
+++ b/.github/workflows/generate-semver-tag.yml
@@ -5,6 +5,18 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Required to create and push tags
+
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Debug repository info
+        run: |
+          echo "Repository: ${{ github.repository }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "SHA: ${{ github.sha }}"
+  
   tag:
     uses: fyn-tech/fyn-env/.github/workflows/generate-semver-tag-shared.yml@main
