--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -10,7 +10,7 @@ plugins:
   - plugin: buf.build/protocolbuffers/python:v31.0
     out: &python-out gen/python
   - plugin: buf.build/protocolbuffers/pyi:v31.1
-    out: &python-out
+    out: *python-out
   - plugin: buf.build/grpc/python:v1.72.0
     out: *python-out
 
