--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,26 +1,28 @@
-version: v1
+version: v2
+managed:
+  enabled: true
 plugins:
   # C++ generation
-  - plugin: buf.build/protocolbuffers/cpp:v31.0
+  - remote: buf.build/protocolbuffers/cpp:v31.0
     out: &cpp-out gen/cpp
-  - plugin: buf.build/grpc/cpp:v1.72.0
+  - remote: buf.build/grpc/cpp:v1.72.0
     out: *cpp-out
 
   # Python generation
-  - plugin: buf.build/protocolbuffers/python:v31.0
+  - remote: buf.build/protocolbuffers/python:v31.0
     out: &python-out gen/python
-  - plugin: buf.build/protocolbuffers/pyi:v31.1
+  - remote: buf.build/protocolbuffers/pyi:v31.1
     out: *python-out
-  - plugin: buf.build/grpc/python:v1.72.0
+  - remote: buf.build/grpc/python:v1.72.0
     out: *python-out
 
   # # Django generation (uses betterproto for Python)
-  # - plugin: buf.build/community/django:v1.5.0
+  # - remote: buf.build/community/django:v1.5.0
   #   out: gen/django
 
   # JavaScript generation
-  - plugin: buf.build/protocolbuffers/js:v3.21.4
+  - remote: buf.build/protocolbuffers/js:v3.21.4
     out: &js-out gen/js
-  - plugin: buf.build/grpc/web:v1.5.0
+  - remote: buf.build/grpc/web:v1.5.0
     out: *js-out
     opt: import_style=commonjs,mode=grpcwebtext
